--- a/TableExportExcle/TableExportExcle/TableExportExcle.csproj
+++ b/TableExportExcle/TableExportExcle/TableExportExcle.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.9" />
+    <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
     <PackageReference Include="NPOI" Version="2.5.6" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.116" />
   </ItemGroup>
