--- a/TableExportExcle/TableExportExcle/TableExportExcle.csproj
+++ b/TableExportExcle/TableExportExcle/TableExportExcle.csproj
@@ -11,7 +11,11 @@
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
     <PackageReference Include="NPOI" Version="2.5.6" />
-    <PackageReference Include="System.Data.SQLite" Version="1.0.116" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Sap.Data.Hana.Core.v2.1">
+      <HintPath>.\\Sap.Data.Hana.Core.v2.1.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
