--- a/TableExportExcle/TableExportExcle/TableExportExcle.csproj
+++ b/TableExportExcle/TableExportExcle/TableExportExcle.csproj
@@ -18,4 +18,10 @@
       <HintPath>.\\Sap.Data.Hana.Core.v2.1.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Assets\" />
+    <Folder Include="View\" />
+    <Folder Include="Model\" />
+  </ItemGroup>
 </Project>
